--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "diceroll.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --color"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Arr262/Dice-Sim/issues"
   },
-  "homepage": "https://github.com/Arr262/Dice-Sim#readme"
+  "homepage": "https://github.com/Arr262/Dice-Sim#readme",
+  "devDependencies": {
+    "jest": "^22.4.3"
+  }
 }
